<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/signup_logo"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/uscdoordrink_logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_normal"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large">

        <ImageView
            android:id="@+id/img_account"
            android:layout_width="@dimen/dp_19"
            android:layout_height="@dimen/dp_20"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:layout_marginLeft="@dimen/margin_tiny"
            android:scaleType="fitXY"
            android:src="@drawable/icon_login_account"/>

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:layout_toRightOf="@+id/img_account"
            android:background="@null"
            android:hint="@string/account"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/text_size_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/img_account"
            android:background="@color/maroon"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_normal"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large">

        <ImageView
            android:id="@+id/img_pw"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_20"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:layout_marginLeft="@dimen/margin_tiny"
            android:scaleType="fitXY"
            android:src="@drawable/icon_login_pw"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/img_pw"
            android:background="@null"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/text_size_normal"/>

        <ImageView
            android:id="@+id/if_see_password"
            android:layout_width="@dimen/image_height_litter"
            android:layout_height="@dimen/image_height_litter"
            android:src="@drawable/ic_baseline_visibility_off_24"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/img_pw"
            android:background="@color/maroon"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_normal"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large">

        <ImageView
            android:id="@+id/img_ci"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_20"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:layout_marginLeft="@dimen/margin_tiny"
            android:scaleType="fitXY"
            android:src="@drawable/image_contact_info_ci"/>

        <EditText
            android:id="@+id/et_ci"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/img_ci"
            android:background="@null"
            android:hint="@string/contact"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/text_size_normal"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/img_ci"
            android:background="@color/maroon"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="@dimen/margin_tiny"
            android:text="@string/customerOrSeller"
            android:textColor="@color/grey" />

        <RadioGroup
            android:id="@+id/select"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >>

            <RadioButton
                android:id="@+id/customer"
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:text="customer"
                android:textSize="@dimen/text_size_normal" />

            <RadioButton
                android:id="@+id/seller"
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dp"
                android:textColor="@color/grey"
                android:layout_height="wrap_content"
                android:text="seller"
                android:textSize="@dimen/text_size_normal" />

        </RadioGroup>


    </LinearLayout>
    <Button
        android:id="@+id/btn_modify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/text_size_normal"
        android:paddingBottom="@dimen/margin_small"
        android:text="@string/signUp"
        android:background="@drawable/btn_maroon_selector"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_normal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/text_size_normal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/toLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:text="Already have an account? Login now -->"
            android:textSize="@dimen/text_size_normal" />

        <Button
            android:id="@+id/Login"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:background="@drawable/btn_maroon_selector"
            android:text="login"
            android:textColor="@android:color/white"
            android:textSize="8dp" />

    </LinearLayout>

</LinearLayout>